fix tippy position on mobile

--- a/src/style/base/_base.sass
+++ b/src/style/base/_base.sass
@@ -20,6 +20,10 @@ a:focus:not(.nav-item)
 .tippy-box
     box-shadow: 2px 2px 3px rgba(51, 51, 51, 0.46) !important
     border: 0 !important
+    .tall-tippy
+        /* fit everything in the screen height */
+        @media (max-height: 500px)
+            font-size: calc(#{$global-font-size} / 1.35)
     &[data-placement^='top']:not([data-theme~='abbr'])
         bottom: 0.3rem
     &[data-placement^='bottom']:not([data-theme~='abbr'])
